# pi-stomp

./: .bouquet.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  GEMINI.md  GUIDE.md  INPUT_ROUTER.md  JACKBRIDGE_RECORDING.md  LICENSE  PLAN-BRIEF.md  PLAN.md  README.md  THIRD_PARTY_LICENSES.md  analyze_layout.sh  deploy.sh  modalapi-agent.py  modalapistomp.py  pistomp-testui.py  pyproject.toml  requirements.txt  run_emulator.sh  setup.sh  test_external_midi.py  test_yin.py  testui.py  update.sh
blend/: __init__.py  easing.py  input_controller.py  manager.py  parameter_setter.py  snapshot.py  stop.py  types.py
common/: color.py  contexts.py  fonts.py  param_roles.py  param_source.py  parameter.py  parameter_steps.py  token.py  util.py
docs/: architecture.md  input-contexts-charter.md  input-contexts-implementation-plan.md  input-routing-unification-plan.md  lcd_worker_thread.md  lv2-ttl-guide.md  multitrack-looper-plan.md  padding-and-margin.md  plan-footswitch-behaviour.md  plugin-customization-guide.md  plugin-panel-tutorial.md  pyright-cleanup.md  r1-binding-census.md  r2-schema-precedence.md  r3-binding-truth.md  r4-badge-surfaces.md  session-recording-plan.md  spi_lcd_timing.md  spi_lcd_timing_pi3.md  spi_lcd_timing_pi5.md  symbol-type-hardening.md
emulator/: __init__.py  bootstrap.py  controls.py  gfxhat_adapters.py  hardware.py  hardware_base.py  hardware_v1.py  hardware_v2.py  hardware_v3.py  lcd_lcdgfx.py  lcd_pygame.py  mod.py  modhandler.py  stubs.py  window.py
fonts/: EtBt6001_license.txt
modalapi/: analogcontrol.py  analogmidicontrol.py  analogswitch.py  connections.py  controller.py  default_config.yml  encoder.py  external_midi.py  footswitch.py  footswitch_behavior.py  gfx.py  hardware.py  jack_mute.py  layout.py  led_render.py  lilv.py  mod.py  modhandler.py  msg.py  parameter.py  pedalboard.py  pedalboard_monitor.py  pistomp.py  plugin.py  plugin_customization.py  relay.py  sync.py  token.py  update.sh  util.py  version_check.py  websocket_bridge.py  wifi.py  ws_protocol.py
pistomp/: alsa_pcm.py  analogVU.py  analogcontrol.py  analogmidicontrol.py  analogswitch.py  audiocard.py  audiocardfactory.py  audioinjector.py  beatsync.py  category.py  config.py  config_overrides.py  controller.py  controller_manager.py  current.py  default_config.yml  default_config_3fs_2knob.yml  default_config_3fs_2knob_exp.yml  default_config_pistompcore.yml  encoder.py  encoder_controller.py  encoderconfig.py  (+44 more)
(+480 files in other folders)
