[project]
name = "pi-stomp"
version = "3.0.0"
description = "DIY high definition, multi-effects stompbox platform for guitar, bass and keyboards"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Randall Reichenbach" }, { name = "Micah van de Merwe" }]
keywords = ["guitar", "effects", "pedal", "raspberry-pi", "audio", "lv2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "python-rtmidi>=1.4",
    "requests>=2.28",
    "Pillow>=9.4",
    "numpy>=1.24",
    "pyalsaaudio>=0.9; sys_platform == 'linux'",
]

[project.optional-dependencies]
# Raspberry Pi hardware dependencies (platform-specific)
hardware = [
    "gfxhat>=0.0.1; sys_platform == 'linux'",
    "matplotlib>=3.5",
    "rpi-ws281x>=5.0; sys_platform == 'linux'",
    "spidev>=3.0; sys_platform == 'linux'",
    "adafruit-circuitpython-neopixel>=6.3",
    "adafruit-circuitpython-rgb-display>=3.10",
    "adafruit-circuitpython-mcp3xxx>=1.4",
]

# Local emulator (macOS / Linux desktop, no Pi hardware required)
emulator = ["pygame>=2.5"]

[dependency-groups]
dev = [
    "numpy>=2.4.1",
    "pillow>=12.0.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.1.0",
    "typing-extensions>=4.15.0",
]

[project.urls]
Homepage = "https://treefallsound.com"
Documentation = "https://www.treefallsound.com/wiki/doku.php"
Repository = "https://github.com/TreeFallSound/pi-stomp"
Issues = "https://github.com/TreeFallSound/pi-stomp/issues"

[project.scripts]
pistomp = "modalapistomp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modalapi", "pistomp", "uilib", "common"]

[tool.ruff]
line-length = 120
target-version = "py311"
ignore = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pyright]
venvPath = "."
venv = ".venv"
stubPath = "typings"
pythonVersion = "3.11"
